# open-poker

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build.yml
db/: db.sql  debug.sql  init.sh
docs/atac/: .env.open_poker  game.json  guest.json  table.json  user.json
src/: api.rs  client.rs  core.rs  db.rs  error.rs  lib.rs  model.rs  server.rs  utils.rs
src/api/: game.rs  guest.rs  room.rs
src/client/: core.rs  error.rs  game.rs  guest.rs  room.rs  table.rs  user.rs
src/core/: game.rs  record.rs  table.rs  user.rs  utils.rs
src/db/: error.rs  game.rs  guest.rs  room.rs  utils.rs
src/model/: card.rs  game.rs  guest.rs  hand.rs  player.rs  room.rs  seat.rs  table.rs
src/server/: api.rs  db.rs
src/server/api/: user.rs
