[package]
name = "open-poker"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-web = "4.10.2"
awc = "3.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
