[package]
name = "open-poker"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
actix-web = "4.11.0"
awc = { version = "3.6.0", optional = false }
anyhow = { version = "1", optional = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web-httpauth = "0.8.2"
